2010-02-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTextStorage.m: Restore return of proxy to user code.
	Add comments so we know we should be doing that.
	* Headers/AppKit/NSTextStorage.h: Document the behavior of the
	-string method.

2010-02-07 Eric Wasylishen <ewasylishen@gmail.com>

	* ColorPickers/GSWheelColorPicker.m: Make the brightness slider
	for the wheel picker continuous.

2010-02-07 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSThemeDrawing.m
	(-drawTitleBarRect:forStyleMask:state:andTitle:):
	Draw window title bar with image tiles, if available

2010-02-07 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSTheme.m:
	* Source/GSThemePrivate.h: 
	* Source/GSThemeDrawing.m (-drawBorderType:frame:view:): 
	Draw borders using image tiles, if available.

2010-02-07 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSPopUpButtonCell.m (-selectItem:): Mark the previously
	selected item as needing display. This fixes the 'popup' indicators
	not being erased.

2010-02-07 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSToolbarItem.m (_isFlexibleSpace): use proper class check
	instead of quick and dirty size check for flexible space property.
	Otherwise items are not allowed to have differing minimum and maximum
	sizes.

2010-02-06 Quentin Mathe <quentin.mathe@gmail.com>

	Fixed table header/content random disappearance with unarchived table 
	views.
	* Source/NSTableView.m (-initWithCoder:): Fixed _columnsOrigin to be 
	always initialized by calling -tile with non-keyed unarchiving. Until 
	now, in case no method that invokes -tile was called before the 
	display, the table header view was not drawing the table header cells 
	but just an empty black stroked rect, since -columnAtPoint: was 
	returning invalid values. This was rarely visible since you usually 
	set a data source with an outlet and -setDataSource: calls -tile.
	Also fixed a _columnOrigins memory with keyed unarchiving.